--- a/app/src/main/res/layout/activity_behavior.xml
+++ b/app/src/main/res/layout/activity_behavior.xml
@@ -124,8 +124,7 @@
         android:layout_height="120dp"
         android:layout_gravity="center"
         android:src="@drawable/smal_cricle"
-        app:layout_behavior=".view.behavior.AvatarImageBehavior"
-        />
+        app:layout_behavior=".view.behavior.AvatarImageBehavior" />
 
     <TextView
         android:layout_marginTop="150dp"
