--- a/app/src/main/res/layout/view_message.xml
+++ b/app/src/main/res/layout/view_message.xml
@@ -11,7 +11,9 @@
         android:text="message 1"
         android:textSize="@dimen/sp_16"
         android:textColor="@color/blue_show"
-        android:layout_marginTop="@dimen/dp_20"/>
+        android:layout_marginTop="@dimen/dp_20"
+        android:drawableLeft="@mipmap/ic_chat_img"
+        android:drawablePadding="4dp"/>
 
     <TextView
         android:id="@+id/tv_msg_two"
@@ -19,9 +21,11 @@
         android:layout_height="@dimen/dp_20"
         android:text="message 2"
         android:textSize="@dimen/sp_16"
-        android:textColor="@color/planbook_default"
+        android:textColor="@color/blue_show"
         android:layout_below="@+id/tv_msg_one"
-        android:layout_marginBottom="5dp" />
+        android:layout_marginBottom="5dp"
+        android:drawableLeft="@mipmap/ic_chat_img"
+        android:drawablePadding="4dp"/>
 
     <TextView
         android:id="@+id/tv_msg_three"
@@ -29,8 +33,11 @@
         android:layout_height="@dimen/dp_20"
         android:text="message 3"
         android:textSize="@dimen/sp_16"
+        android:textColor="@color/blue_show"
         android:layout_below="@+id/tv_msg_one"
         android:layout_marginBottom="5dp"
+        android:drawableLeft="@mipmap/ic_chat_img"
+        android:drawablePadding="4dp"
         android:visibility="gone"/>
 
 </RelativeLayout>
