--- a/app/src/main/res/layout/activity_constrain_layout.xml
+++ b/app/src/main/res/layout/activity_constrain_layout.xml
@@ -36,20 +36,20 @@
             android:id="@+id/tv_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="afaafasgagagaaga"
+            android:text="afaafasgagagaagagaaggaa"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="10dp"
             app:layout_constraintBottom_toTopOf="@+id/tv_content"
             app:layout_constraintLeft_toRightOf="@+id/tv_header"
             android:layout_marginLeft="10dp"
-            app:layout_constraintVertical_chainStyle="spread"
-            />
+            app:layout_constraintVertical_chainStyle="packed"
+            android:singleLine="true"/>
 
         <TextView
             android:id="@+id/tv_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="这是带到好多好多号大师的压抑的八十多白DAU忽视抽时间啊忽的煅"
+            android:text="这是带到好多好多号大师的压抑的八十多白DAU忽视抽时间啊忽的的八十多白DAU忽视抽时间煅"
             app:layout_constraintLeft_toRightOf="@+id/tv_header"
             android:layout_marginLeft="10dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_title"
