--- a/app/src/main/res/layout/activity_profile_layout.xml
+++ b/app/src/main/res/layout/activity_profile_layout.xml
@@ -15,10 +15,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <!--scroll|exitUntilCollapsed|snap-->
             <android.support.design.widget.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <RelativeLayout
                     android:id="@+id/lay_header"
