--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -5,40 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.zs.various.activity.DialogActivity">
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
-
-        <LinearLayout
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:orientation="vertical"
-            android:layout_gravity="right">
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_gravity="right"/>
-
-        </LinearLayout>
-
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:layout_gravity="bottom"/>
-
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_vertical|right"/>
-
-    </FrameLayout>
-
-
-
+    tools:context="com.zs.various.activity.DialogWithPopupActivity">
 
     <TextView
         android:id="@+id/btn_1"
@@ -58,6 +25,17 @@
         android:background="@color/colorAccent"
         android:textColor="@color/white"
         android:text="dialog_fragment"
+        android:layout_marginTop="20dp"
+        />
+
+    <TextView
+        android:id="@+id/btn_3"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:background="@color/colorAccent"
+        android:textColor="@color/white"
+        android:text="popup_window"
         android:layout_marginTop="20dp"
         />
 
