--- a/app/src/main/res/layout/button_layout.xml
+++ b/app/src/main/res/layout/button_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zs.various.view.ColorfulView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zs.various.view.ColorfullView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,4 +14,4 @@
             android:layout_centerInParent="true" />
     </RelativeLayout>
 
-</com.zs.various.view.ColorfulView>
+</com.zs.various.view.ColorfullView>
