--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -19,6 +19,21 @@
 
     </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="320dp">
+
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:background="@color/color_0"/>
+
+
+    </LinearLayout>
+
 
 
 </android.support.constraint.ConstraintLayout>
