--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,14 @@
         <item name="colorAccent">@color/colorAccent</item>  <!-- 重点 -->
     </style>
 
+    <style name="TransparentTheme" parent="AppTheme.Base">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowAnimationStyle">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item> <!-- 无标题 -->
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
     <style name="ItemType">
         <item name="android:inputType">textPassword</item>
     </style>
