--- a/app/src/main/res/layout/activity_anim.xml
+++ b/app/src/main/res/layout/activity_anim.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:paddingTop="@dimen/dp_20"
     android:orientation="vertical"
     tools:context="com.zs.various.activity.AnimActivity">
 
@@ -123,8 +123,18 @@
         android:orientation="horizontal"
         android:layout_marginTop="20dp">
 
+        <com.zs.various.view.MusicCutView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/dp_20"
+            android:paddingRight="@dimen/dp_20"
+            android:background="@color/black" />
+
     </LinearLayout>
 
-
+    <com.zs.various.view.SeekPointLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/black"/>
 
 </LinearLayout>
