--- a/app/src/main/res/layout/activity_custom_view2.xml
+++ b/app/src/main/res/layout/activity_custom_view2.xml
@@ -47,6 +47,7 @@
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
         android:visibility="visible">
 
         <com.zs.various.view.ShadowView
@@ -60,7 +61,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:scaleType="centerCrop"
-            app:corner_radius="@dimen/dp_10"
+            android:src="@drawable/bg_girl"
+            app:corner_radius="@dimen/dp_20"
             android:layout_gravity="center_horizontal" />
 
     </FrameLayout>
