--- a/app/src/main/res/layout/activity_custom_view2.xml
+++ b/app/src/main/res/layout/activity_custom_view2.xml
@@ -13,20 +13,36 @@
         android:layout_height="300dp"
         />
 
-    <com.zs.various.view.ShadowLayout
-        android:id="@+id/shadow_layout"
+    <com.zs.various.view.RoundImageView
+        android:id="@+id/round_img"
         android:layout_width="90dp"
-        android:layout_height="wrap_content">
+        android:layout_height="90dp"
+        android:layout_margin="@dimen/dp_20"
+        android:scaleType="centerCrop"
+        app:corner_radius="@dimen/dp_20"
+        app:border_width="2dp"
+        app:border_color="@color/color_1"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/bg_girl"/>
 
-        <com.zs.various.view.RoundImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:scaleType="centerCrop"
-            app:corner_radius="@dimen/dp_10"
-            android:layout_centerHorizontal="true"
-            />
+<!--    <com.zs.various.view.ShadowLayout-->
+<!--        android:id="@+id/shadow_layout"-->
+<!--        android:layout_marginLeft="@dimen/dp_20"-->
+<!--        android:layout_width="90dp"-->
+<!--        android:layout_height="wrap_content">-->
 
-    </com.zs.various.view.ShadowLayout>
+<!--        <com.zs.various.view.RoundImageView-->
+<!--            android:id="@+id/round_img"-->
+<!--            android:layout_width="90dp"-->
+<!--            android:layout_height="90dp"-->
+<!--            android:scaleType="centerCrop"-->
+<!--            app:is_circle="true"-->
+<!--            app:border_width="@dimen/dp_20"-->
+<!--            app:border_color="@color/color_1"-->
+<!--            android:layout_centerHorizontal="true"-->
+<!--            android:src="@drawable/bg_girl"/>-->
+
+<!--    </com.zs.various.view.ShadowLayout>-->
 
     <com.zs.various.view.ShadowLayout
         android:layout_width="match_parent"
@@ -44,28 +60,6 @@
 
     </com.zs.various.view.ShadowLayout>
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:visibility="visible">
-
-        <com.zs.various.view.ShadowView
-            android:id="@+id/shadow_img"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginTop="10dp" />
-
-        <com.zs.various.view.RoundImageView
-            android:id="@+id/round_img"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/bg_girl"
-            app:corner_radius="@dimen/dp_20"
-            android:layout_gravity="center_horizontal" />
-
-    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
