--- a/app/src/main/res/layout/activity_rxjava.xml
+++ b/app/src/main/res/layout/activity_rxjava.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <ImageView
-        android:id="@+id/iv_image"
+        android:id="@+id/iv_image_1"
         android:layout_width="100dp"
         android:layout_height="100dp"
         />
 
+    <ImageView
+        android:id="@+id/iv_image_2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="@dimen/dp_20"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
