--- a/app/src/main/res/layout/activity_behavior.xml
+++ b/app/src/main/res/layout/activity_behavior.xml
@@ -11,6 +11,7 @@
         android:id="@+id/main_abl_app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_behavior=".view.behavior.AppBarLayoutBehavior"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -24,8 +25,7 @@
                 android:layout_height="300dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/large"
-                app:layout_collapseMode="parallax"
-                />
+                app:layout_collapseMode="parallax" />
 
             <FrameLayout
                 android:id="@+id/main_fl_title"
