--- a/app/src/main/res/layout/activity_reflex.xml
+++ b/app/src/main/res/layout/activity_reflex.xml
@@ -28,9 +28,40 @@
         android:layout_height="400dp"
         android:background="@drawable/round_bg"
         android:layout_centerInParent="true"
-        android:elevation="8dp">
-
+        android:elevation="8dp"
+        android:visibility="gone">
     </RelativeLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="250dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_line_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="湖南卫南卫aaaay1230"
+            android:textSize="40sp"
+            android:background="@color/color_1"/>
+
+
+        <TextView
+            android:id="@+id/tv_line_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
+            android:text="湖南卫视湖南卫视湖南卫视湖南卫视湖南卫视湖南卫视湖南卫视湖南卫视湖南卫视湖南卫视湖南卫视湖南卫视湖南卫视湖南卫视"
+            android:lineSpacingExtra="0dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="0dp"
+            android:textSize="20dp"
+            android:background="@color/color_1"/>
+
+
+    </LinearLayout>
 
 
 
