--- a/app/src/main/res/drawable-xxhdpi/bg_tag.xml
+++ b/app/src/main/res/drawable-xxhdpi/bg_tag.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/blue"/>
-    <corners android:radius="5dp"/>
+    <solid android:color="#99ff0000"/>
+    <corners android:radius="10dp"/>
 
 </shape>
