--- a/app/src/main/res/layout/activity_custom_view4.xml
+++ b/app/src/main/res/layout/activity_custom_view4.xml
@@ -8,13 +8,50 @@
     android:background="@color/white"
     tools:context="com.zs.various.activity.CustomViewFirstActivity">
 
-    <com.zs.various.view.FlowLayout
-        android:id="@+id/flow_layout"
+    <EditText
+        android:id="@+id/et_tag"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginBottom="20dp"/>
+
+    <Button
+        android:id="@+id/btn_add"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:text="add"/>
+
+    <Button
+        android:id="@+id/btn_clear"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:text="clear"/>
+
+    <com.zs.various.view.flowlayout.FlowTagLayoutMine
+        android:id="@+id/flow_layout_mine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/hint_color"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"/>
+
+
+    <com.zs.various.view.flowlayout.FlowTagLayout
+        android:id="@+id/flow_tag_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/hint_color"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"/>
+
+    <com.zs.various.view.flowlayout.FlowTagFoldLayout
+        android:id="@+id/flow_fold_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/hint_color"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"/>
+
 
 
 </LinearLayout>
