--- a/app/src/main/res/layout/item_tag_view.xml
+++ b/app/src/main/res/layout/item_tag_view.xml
@@ -18,4 +18,12 @@
         android:ellipsize="end"
         android:background="@drawable/bg_tag"/>
 
+    <ImageView
+        android:id="@+id/iv_tag_arrow"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:padding="9dp"
+        android:background="@drawable/bg_tag"
+        android:visibility="gone"/>
+
 </FrameLayout>
