--- a/app/src/main/res/layout/activity_custom_view4.xml
+++ b/app/src/main/res/layout/activity_custom_view4.xml
@@ -72,6 +72,54 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"/>
 
+    <com.zs.various.view.BottomMoreLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@color/color_0"
+            android:gravity="center"
+            android:text="0"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@color/color_1"
+            android:gravity="center"
+            android:text="1"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@color/color_2"
+            android:gravity="center"
+            android:text="2"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@color/color_3"
+            android:gravity="center"
+            android:text="3"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@color/color_4"
+            android:gravity="center"
+            android:text="4"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@color/color_5"
+            android:gravity="center"
+            android:text="6"/>
+
+    </com.zs.various.view.BottomMoreLayout>
+
 
 
 </LinearLayout>
