--- a/app/src/main/res/layout/activity_dispatch_move_layout.xml
+++ b/app/src/main/res/layout/activity_dispatch_move_layout.xml
@@ -45,7 +45,7 @@
 
     <com.zs.various.view.dispatch.ViewBack
         android:id="@+id/view_back"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="200dp"
         android:background="@color/color_4"
         android:layout_alignParentBottom="true"
