--- a/app/src/main/res/layout/kotlin_test_layout.xml
+++ b/app/src/main/res/layout/kotlin_test_layout.xml
@@ -7,7 +7,7 @@
 
 
     <TextView
-        android:id="@+id/tv_name"
+        android:id="@+id/tv_age"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_margin="20dp"/>
