--- a/app/src/main/res/layout/kotlin_test_layout.xml
+++ b/app/src/main/res/layout/kotlin_test_layout.xml
@@ -19,6 +19,10 @@
         android:layout_height="100dp"
         android:layout_margin="20dp"/>
 
+    <com.zs.various.view.ItemView
+        android:id="@+id/item_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
