--- a/app/src/main/res/layout/kotlin_test_layout.xml
+++ b/app/src/main/res/layout/kotlin_test_layout.xml
@@ -14,7 +14,7 @@
 
 
     <ImageView
-        android:id="@+id/tv_avatar"
+        android:id="@+id/iv_avatar"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_margin="20dp"/>
