--- a/app/src/main/res/layout/kotlin_test_layout.xml
+++ b/app/src/main/res/layout/kotlin_test_layout.xml
@@ -24,5 +24,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <com.zs.various.kotlin.view.TestView
+        android:id="@+id/test_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 
 </LinearLayout>
