[comments]： edittext 监听 [jira_id]：nengmao [version]：

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -32,6 +32,12 @@
             android:background="@color/color_0"/>
 
 
+        <com.zs.various.view.SearchEditText
+            android:id="@+id/edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"/>
+
+
     </LinearLayout>
 
 
