[comments]： add [jira_id]：nengmao [version]：

--- a/app/src/main/res/layout/activity_glide.xml
+++ b/app/src/main/res/layout/activity_glide.xml
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/image_view"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/image_view_url"
         android:layout_width="160dp"
         android:layout_height="200dp"
-        android:background="@color/color_1"/>
+        android:background="@color/color_1" />
 
-</RelativeLayout>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/image_view_local"
+        android:layout_width="160dp"
+        android:layout_height="200dp"
+        android:src="@mipmap/ic_shell_bg_x" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="160dp"
+        android:layout_height="200dp"
+        android:src="@mipmap/ic_shell_bg_xx" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="160dp"
+        android:layout_height="200dp"
+        android:src="@mipmap/ic_shell_bg_xxx" />
+
+
+
+    <com.zs.various.view.largeimage.LargeImageView
+        android:id="@+id/image_view_url_large"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/color_1"
+        android:visibility="gone"/>
+
+
+</LinearLayout>
